# ai-training

./: .gitmodules  README.md  main.py  pyproject.toml
agent/: state.py
agent/nodes/: intent.py
ai-advanced-agent-workshop-cpy/: README.md
ai-advanced-agent-workshop-cpy/part_1/: README.md  main.py  pyproject.toml
ai-advanced-agent-workshop-cpy/part_1/config/: __init__.py  settings.py  tasks.yaml
ai-advanced-agent-workshop-cpy/part_1/explanation_materials/: 00_pydantic.ipynb
ai-advanced-agent-workshop-cpy/part_1/settings/: .env.example
ai-advanced-agent-workshop-cpy/part_1/utils/: llm_client.py
ai-advanced-agent-workshop-cpy/part_10/: .gitignore  README.md  main.py  pyproject.toml
ai-advanced-agent-workshop-cpy/part_10/api/: __init__.py  deps.py
ai-advanced-agent-workshop-cpy/part_10/db/: models.py  schema_reference.md  validate_sql.py
ai-advanced-agent-workshop-cpy/part_10/eval/: __init__.py  metrics.py  run_intent_eval.py
ai-advanced-agent-workshop-cpy/part_10/prompts/: sql_answer.md
ai-advanced-agent-workshop-cpy/part_10/utils/: logger.py  observability.py
ai-advanced-agent-workshop-cpy/part_2/: README.md  pyproject.toml
ai-advanced-agent-workshop-cpy/part_2/agent/: state.py
ai-advanced-agent-workshop-cpy/part_2/explanation_materials/: 00_pydantic.ipynb  01_langgraph.ipynb  01_thinking_in_langgraph.md  02_async.ipynb
ai-advanced-agent-workshop-cpy/part_2/prompts/: loader.py
ai-advanced-agent-workshop-cpy/part_2/settings/: .env.example
ai-advanced-agent-workshop-cpy/part_2/utils/: llm_client.py
ai-advanced-agent-workshop-cpy/part_3/: README.md  main.py  pyproject.toml
ai-advanced-agent-workshop-cpy/part_3/agent/: __init__.py
ai-advanced-agent-workshop-cpy/part_3/config/: settings.py  tasks.yaml
ai-advanced-agent-workshop-cpy/part_3/db/: models.py
ai-advanced-agent-workshop-cpy/part_3/explanation_materials/: ingest_reports_walkthrough.ipynb
ai-advanced-agent-workshop-cpy/part_3/prompts/: __init__.py
ai-advanced-agent-workshop-cpy/part_3/settings/: .env.example
ai-advanced-agent-workshop-cpy/part_4/: README.md
ai-advanced-agent-workshop-cpy/part_4/agent/: node_messages.py  state.py
ai-advanced-agent-workshop-cpy/part_4/config/: settings.py
ai-advanced-agent-workshop-cpy/part_4/db/: models.py  schemas.py
ai-advanced-agent-workshop-cpy/part_4/prompts/: document_answer.md
ai-advanced-agent-workshop-cpy/part_5/: README.md  main.py
ai-advanced-agent-workshop-cpy/part_6/: .gitignore  README.md  pyproject.toml
ai-advanced-agent-workshop-cpy/part_7/: README.md  main.py  pyproject.toml
ai-advanced-agent-workshop-cpy/part_7/agent/: graph.py  node_messages.py  state.py
ai-advanced-agent-workshop-cpy/part_7/agent/nodes/: human_review.py
ai-advanced-agent-workshop-cpy/part_7/db/: __init__.py  queries.py
ai-advanced-agent-workshop-cpy/part_7/settings/: .env.example
ai-advanced-agent-workshop-cpy/part_7/tests/unit/: test_human_review.py  test_intent.py  test_llm_client.py
ai-advanced-agent-workshop-cpy/part_7/utils/: llm_client.py
ai-advanced-agent-workshop-cpy/part_8/: README.md
ai-advanced-agent-workshop-cpy/part_9/: README.md  main.py  pyproject.toml  run_api.py  ui.html
config/: settings.py  tasks.yaml
db/: models.py  schema_snippet.py  schemas.py  session.py  vaildate_sql.py
prompts/: intent_recognition.md
utils/: llm_client.py
(+98 files in other folders)
