[project]
name = "ai-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "pydantic",
 "pandas",
 "ruff>=0.15.17",
]

norecursedirs = ["ai-advanced-agent-workshop"] # add this if cloning reference repo

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.uv.workspace]
members = ["."]
exclude = ["ai-advanced-agent-workshop"] # add this if cloning reference repo

[tool.ruff]
extend-exclude = ["ai-advanced-agent-workshop"] # add this if cloning reference repo
