[project]
name = "agentic-rag"
version = "0.1.0"
description = "An application to support business reporting with an agentic system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json-repair>=0.59.10",
    "langchain-core>=0.3.0",
    "langchain-litellm>=0.2.1",
    "litellm>=1.86.2",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
norecursedirs = ["repo_name"] # add this if cloning reference repo

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.uv.workspace]
members = ["."]
exclude = ["repo_name"] # add this if cloning reference repo

[tool.ruff]
extend-exclude = ["repo_name"] # add this if cloning reference repo