[project]
name = "agentic-rag"
version = "0.1.0"
description = "An application to support business reporting with an agentic system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "json-repair>=0.59.10",
    "langchain-core>=1.4.0",
    "langchain-litellm>=0.2.1",
    "langgraph>=1.2.0",
    "litellm>=1.86.2",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.40",
    "sqlglot>=26.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
norecursedirs = ["repo_name"] # add this if cloning reference repo

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.uv.workspace]
members = ["."]
exclude = ["repo_name"] # add this if cloning reference repo

[tool.ruff]
extend-exclude = ["repo_name"] # add this if cloning reference repo